--- a/portfoliomatheus/index.html
+++ b/portfoliomatheus/index.html
@@ -7,13 +7,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <title>Criando seu Portfólio - Tutorial Carlos TAG</title>
+    <title>Criando seu Portfólio - Tutorial Matheus TAG</title>
   </head>
   <body>
     <section>      
       <nav>
         
-        <a href="#" class="logo"> Carlos TAG</a>
+        <a href="#" class="logo"> Matheus TAG</a>
         <ul>
           <li><a href="#" class="active">Home</a></li>
           <li><a href="#">Sobre</a></li>
@@ -28,7 +28,7 @@
       </div>
       <div class="conteudo-texto">
         <p>Bem-Vindos</p>
-        <p>Óla me chamo Carlos!!</p>
+        <p>Óla me chamo Matheus!!</p>
         <p>
           Ciência da Computação <br />
           Web Developer & Front End Designer
