--- a/portfoliomatheus/index.html
+++ b/portfoliomatheus/index.html
@@ -43,7 +43,7 @@
     </section>
 
     <div class="conteudo-sobre">
-        <img src="img/.JPG" />
+        <img src="img/matheus.jfif" />
 
       <div class="texto-sobre">
         <p>Sobre</p>
