--- a/portfoliomatheus/index.html
+++ b/portfoliomatheus/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="conteudo-texto">
         <p>Bem-Vindos</p>
-        <p>Óla me chamo Matheus!!</p>
+        <p>Óla me chamo Matheus</p>
         <p>
           Ciência da Computação <br />
           Web Developer & Front End Designer
@@ -37,9 +37,7 @@
         <button class="btn2">DOWNLOAD CV</button>
       </div>
 
-      <div>
-        <img src="img/carlos.png" class="imgbg"/>
-      </div>
+     
     </section>
 
     <div class="conteudo-sobre">
@@ -50,16 +48,13 @@
         <p>Ciência da Computação - Web Developer & Front End Designer</p>
 
         <p>
-          Olá meu nome é Carlos Augusto mais algumas pessoas me chamam de Carlos
-          sou formando em Ciência da Computação com forte foco em
+          Olá meu nome é Matheus
+          estou estudando na Alura com forte foco em
           Desenvolvimento Web/Fornt End - HTML & CSS / JavaScript / React /
           Angular / jQuery.
         </p>
         <p>
-          Na atualidade trabalho como Líder de Logística / Recebimento /
-          Expedição / La Rondine Ind. e Com. Emb. Ltda, e sou apaixonada por
-          tecnologia e Web Developer & Front End Designer sou fã de Rock e louco
-          por Programação.
+          Já trabalhei como Operador de Produção onde aprendi como trabalhar em equipe e solucionar diversos problemas, o que apesar de ser uma área diferente da computação mostra a principal característica de um programador: A vontade de resolver problemas.
         </p>
 
         <button class="btn1">SAIBA MAIS</button>
