--- a/portfoliomatheus/index.html
+++ b/portfoliomatheus/index.html
@@ -156,7 +156,7 @@
         <button>Fale comigo</button>
     </div>
     <footer>
-      <p>Portal Carlos TAG</p>
+      <p>Portal Matheus</p>
       <p>As estratégias de Inbound marketing ou Marketing Direto irão trazer diversas possibilidades.</p>
       <p class="copy">Copyright by Carlos TAG</p>
     </footer>
