--- a/portfoliomatheus/index.html
+++ b/portfoliomatheus/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="conteudo-texto">
         <p>Bem-Vindos</p>
-        <p>Óla me chamo Matheus</p>
+        <p>Óla, me chamo Matheus</p>
         <p>
           Ciência da Computação <br />
           Web Developer & Front End Designer
